--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,18 @@
 # Este arquivo .gitignore foi criado automaticamente pelo Microsoft(R) Visual Studio.
 ################################################################################
 
-/.vs/CancellationTokenApp
+# Visual Studio
+.vs/
+*.suo
+
+# Build outputs
+bin/
+obj/
+
+# ASP.NET static web assets
+*.staticwebassets.endpoints.json
+*.staticwebassets.runtime.json
+
+# Compressed static assets (ASP.NET Core)
+**/compressed/
+
